<resources>
    <string name="app_name">ShoppingChartApp</string>
    <string name="app_name_text">Shopping Chart</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="currency">Currency</string>
    <string name="other_settings">Other settings</string>
    <string name="b">B:</string>
    <string name="g">G:</string>
    <string name="r">R:</string>
    <string name="color">Color:</string>
    <string name="size">Size:</string>
    <string name="text_settings">Text settings</string>
    <string name="options">Options</string>
    <string name="save_button">Save button</string>
    <string name="textview">TextView</string>
    <string name="pln">PLN</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="component_which_shows_selected_color">Component which shows selected color</string>
    <string name="product">Product</string>
    <string name="_0">0</string>
    <string name="_0_0">0.0</string>
    <string name="name">Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="setting_button">Setting button</string>
    <string name="shopping_chart_button">Shopping chart button</string>
    <string name="add_button">Add button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiczE5NTQxIiwiYSI6ImNsYnI0YTZ0aTBrbXczbnFudm5xN3ZvMWMifQ.0YiX1mqOfIGYIm6zPTYROg</string>
</resources>