<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/shopMapButton"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:backgroundTint="#00B58787"
        android:contentDescription="Shop map button"
        android:cropToPadding="false"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
        app:layout_constraintStart_toEndOf="@+id/accountButton"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.758"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:backgroundTint="#00B58787"
        android:contentDescription="Account button"
        android:cropToPadding="false"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.758"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:backgroundTint="#00B58787"
        android:contentDescription="@string/setting_button"
        android:cropToPadding="false"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.75"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="236dp"
        android:text="@string/app_name_text"
        android:textSize="34sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/shoppingChartButton"
        android:layout_width="405dp"
        android:layout_height="448dp"
        android:backgroundTint="#00B58787"
        android:contentDescription="@string/shopping_chart_button"
        android:cropToPadding="false"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_shopping_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>